# mc-rs-gui

./: AGENTS.md  Cargo.toml  README.md  TODO.md  mise.toml
.github/workflows/: ci.yml  release-on-merge.lock.yml  release-on-merge.md  release.yml
src/: app.rs  main.rs
src/bookmarks/: mod.rs  storage.rs
src/config/: keymap.rs  mod.rs
src/dialogs/: chmod.rs  confirm.rs  input.rs  mod.rs  progress.rs
src/editor/: mod.rs
src/menu/: menu_bar.rs  mod.rs
src/operations/: executor.rs  mod.rs
src/panel/: mod.rs  sort.rs
src/search/: finder.rs  mod.rs
src/util/: human_size.rs  icons.rs  mod.rs  time_fmt.rs
src/vfs/: archive.rs  ftp.rs  local.rs  mod.rs  sftp.rs
src/viewer/: hex_view.rs  mod.rs  text_view.rs
src/widgets/: mod.rs  path_input.rs
