[package]
name = "mc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI
iced = { version = "0.14", features = ["advanced", "canvas", "svg", "image", "lazy", "tokio", "markdown", "highlighter"] }
iced-longbridge = { git = "https://github.com/uxsoft/iced-longbridge" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "2"

# Archives
tar = "0.4"
flate2 = "1"
zip = "2"

# Remote
suppaftp = { version = "8", features = ["tokio"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

# Misc
chrono = { version = "0.4", features = ["serde"] }
bytesize = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3.47"

[patch."https://github.com/uxsoft/iced-longbridge"]
iced-longbridge = { path = "../iced-longbridge/crates/iced-longbridge" }
